[package]
name = "flash_taskbar_app"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }
eframe = "0.29.1"
log = "0.4.22"
env_logger = "0.11.5"
winit = "0.30.5"
egui_winit_platform = "0.24.0"
